--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
 
   charon:
     image: obolnetwork/charon:${CHARON_VERSION:-v0.10.1}
+    container_name: charon_minimal
     environment:
       - CHARON_BEACON_NODE_ENDPOINTS=${CHARON_BEACON_NODE_ENDPOINTS:-http://lighthouse:5052}
       - CHARON_LOG_LEVEL=${CHARON_LOG_LEVEL:-info}
@@ -110,6 +111,7 @@ services:
 
   teku:
     image: consensys/teku:${TEKU_VERSION:-22.9.1}
+    container_name: teku_minimal
     ports:
       - ${TEKU_PORT_METRICS:-8009}:8008 # Metrics
     command: |
