support optional nimbus beacon node

--- a/.env.sample
+++ b/.env.sample
@@ -23,6 +23,34 @@
 #LIGHTHOUSE_PORT_P2P=
 #LIGHTHOUSE_PORT_METRICS=
 
+######### Nimbus Config ###########
+
+# Note that Nimbus is an alternative beacon node to the default Lighthouse beacon node.
+# Run with `docker-compose up compose-nimbus.yml`.
+# Connect charon by configuring: `CHARON_BEACON_NODE_ENDPOINTS=http://nimbus:5053`
+
+# Nimbus beacon node docker container image version, e.g. `latest` or `v22.10.0`.
+# See available tags https://hub.docker.com/r/statusim/nimbus-eth2/tags
+#NUMBUS_VERSION=
+
+# Nimbus host exposed ports
+#NIMBUS_PORT_P2P=
+#NIMBUS_PORT_P2P=
+#NIMBUS_PORT_REST=
+#NIMBUS_PORT_REST=
+
+# Nimbus execution client Web3 URL.
+#NIMBUS_WEB3_URL=
+
+# Nimbus external IP for incoming P2P connections.
+#NIMBUS_EXTERNAL_IP=
+
+# Nimbus docker-compose network to connect to other containers.
+#NIMBUS_DOCKER_NETWORK=
+
+# Nimbus trusted checkpoint sync.
+#NIMBUS_TRUSTED_SYNC=trustedNodeSync --trusted-node-url=https://goerli.checkpoint-sync.ethdevops.io
+
 ######### Teku Config #########
 
 # Teku validator client docker container image version, e.g. `latest` or `22.3.1`.
