--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,6 +116,24 @@ services:
       - ./teku:/opt/data
     restart: unless-stopped
 
+  #      _           _
+  #  _ __ (_)_ __ ___ | |__  _   _ ___
+  #  | '_ \| | '_ ` _ \| '_ \| | | / __|
+  #  | | | | | | | | | | |_) | |_| \__ \
+  #  |_| |_|_|_| |_| |_|_.__/ \__,_|___/
+
+# NOTE: Uncomment the section below to use nimbus. Also comment teku vc section above.
+#  nimbus:
+#      build: nimbus
+#      networks: [ dvnode ]
+#      restart: unless-stopped
+#      environment:
+#        BEACON_NODE_ADDRESS: "http://charon:3600"
+#        NODE: node
+#      volumes:
+#        - .charon/validator_keys:/home/validator_keys
+#        - ./nimbus:/home/user/data
+
   #                        _ _             _
   #  _ __ ___   ___  _ __ (_) |_ ___  _ __(_)_ __   __ _
   # | '_ ` _ \ / _ \| '_ \| | __/ _ \| '__| | '_ \ / _` |
