--- a/docker-compose.obol.yaml
+++ b/docker-compose.obol.yaml
@@ -1,19 +1,19 @@
 services:
-  #geth:
+  geth:
     # Disable geth
     #profiles: [disable]
     # Bind geth internal ports to host ports
-    #ports:
-      #- 8545:8545 # JSON-RPC
+    ports:
+      - 8545:8545 # JSON-RPC
       #- 8551:8551 # AUTH-RPC
       #- 6060:6060 # Metrics
 
-  #lighthouse:
+  lighthouse:
     # Disable lighthouse
     #profiles: [disable]
     # Bind lighthouse internal ports to host ports
-    #ports:
-      #- 5052:5052 # HTTP
+    ports:
+      - 5052:5052 # HTTP
       #- 5054:5054 # Metrics
 
   charon:
