--- a/prometheus/prometheus-lido.yml
+++ b/prometheus/prometheus-lido.yml
@@ -21,10 +21,10 @@ scrape_configs:
       - targets: ["lighthouse:5054"]
   - job_name: "charon"
     static_configs:
-      - targets: ["charon:3620"]
+      - targets: ["charon-lido:3620"]
   - job_name: "teku"
     static_configs:
-      - targets: ["teku:8008"]
+      - targets: ["teku-lido:8008"]
   - job_name: "node-exporter"
     static_configs:
       - targets: ["node-exporter:9100"]
