--- a/docker-compose.lido.yaml
+++ b/docker-compose.lido.yaml
@@ -54,7 +54,7 @@ services:
     # Disable teku
     #profiles: [disable]
     # Bind teku internal ports to host ports
-    #ports:
+    ports:
       - 8009:8008 # Metrics
 
   prometheus:
