--- a/docker-compose.lido.yaml
+++ b/docker-compose.lido.yaml
@@ -77,7 +77,7 @@ services:
     #ports:
       #- 18550:18550 # Metrics
 
-# networks:
-#   dvnode:
-#     name: ${CHARON_DOCKER_NETWORK:-charon-distributed-validator-node_dvnode}
-#     external: true
+networks:
+  dvnode:
+    name: obol_dvnode
+    external: true
