--- a/docker-compose.obol.yaml
+++ b/docker-compose.obol.yaml
@@ -4,17 +4,17 @@ services:
     #profiles: [disable]
     # Bind geth internal ports to host ports
     ports:
-      - 8545:8545 # JSON-RPC
+      #- 8545:8545 # JSON-RPC
       #- 8551:8551 # AUTH-RPC
-      #- 6060:6060 # Metrics
+      - 6060:6060 # Metrics
 
   lighthouse:
     # Disable lighthouse
     #profiles: [disable]
     # Bind lighthouse internal ports to host ports
     ports:
-      - 5052:5052 # HTTP
-      #- 5054:5054 # Metrics
+      # 5052:5052 # HTTP
+      - 5054:5054 # Metrics
 
   charon:
     networks:
