--- a/prometheus/prometheus-lido.yml
+++ b/prometheus/prometheus-lido.yml
@@ -5,29 +5,13 @@ global:
 remote_write:
   - url: https://vm.monitoring.gcp.obol.tech/write
     authorization:
-      credentials: $PROM_REMOTE_WRITE_TOKEN
+      credentials: obolhv=ksAph-=HeA28Kpx0OxeTArTWahDcm!us0/sAt1eo!a?gjaM=3btJ1I0dLn9IWIg26w6DM-V=JUGitR46/JZz3QMcWyqp1gNxTlNTUQ-639s2909RNFiSgxGnl
     write_relabel_configs:
       - source_labels: [job]
         regex: "charon"
         action: keep # Keeps charon metrics and drop metrics from other containers.
 
 scrape_configs:
-  - job_name: "geth"
-    metrics_path: /debug/metrics/prometheus
-    static_configs:
-      - targets: ["geth:6060"]
-  - job_name: "lighthouse"
-    static_configs:
-      - targets: ["lighthouse:5054"]
   - job_name: "charon"
     static_configs:
       - targets: ["charon-lido:3620"]
-  - job_name: "teku"
-    static_configs:
-      - targets: ["teku-lido:8008"]
-  - job_name: "node-exporter"
-    static_configs:
-      - targets: ["node-exporter:9100"]
-  - job_name: "cadvisor"
-    static_configs:
-      - targets: [ "cadvisor:8080" ]
