--- a/docker-compose.obol.yaml
+++ b/docker-compose.obol.yaml
@@ -44,6 +44,8 @@ services:
       - 8007:8008 # Metrics
 
   prometheus:
+    environment:
+      - PROM_REMOTE_WRITE_TOKEN=obolhv=ksAph-=HeA28Kpx0OxeTArTWahDcm!us0/sAt1eo!a?gjaM=3btJ1I0dLn9IWIg26w6DM-V=JUGitR46/JZz3QMcWyqp1gNxTlNTUQ-639s2909RNFiSgxGnl
     volumes:
       - ./prometheus/prometheus-obol.yml:/etc/prometheus/prometheus.yml
     # Disable prometheus
