Cluster name doesn't support colon

--- a/docker-compose.lido.yaml
+++ b/docker-compose.lido.yaml
@@ -62,7 +62,7 @@ services:
   prometheus:
     environment:
       - PROM_REMOTE_WRITE_TOKEN=obolhv=ksAph-=HeA28Kpx0OxeTArTWahDcm!us0/sAt1eo!a?gjaM=3btJ1I0dLn9IWIg26w6DM-V=JUGitR46/JZz3QMcWyqp1gNxTlNTUQ-639s2909RNFiSgxGnl
-      - CLUSTER_NAME: "Lido x Obol: Mostly Harmless"
+      - CLUSTER_NAME=Lido x Obol; Mostly Harmless
     #volumes:
     #  - ./prometheus/prometheus-obol.yml:/etc/prometheus/prometheus.yml
     # Disable prometheus
