moving to hosttech

--- a/docker-compose.lido.yaml
+++ b/docker-compose.lido.yaml
@@ -39,6 +39,7 @@ services:
           - charon-lido
     environment:
       - CHARON_PORT_P2P_TCP=3611
+      - CHARON_BEACON_NODE_ENDPOINTS=https://lighthouse-testnet.swiss-staking.ch
     # Configure any additional env var flags in .env.charon.more
     #env_file: [.env.charon.more]
     # Bind charon internal ports to host ports
