--- a/prometheus/prometheus-lido.yml
+++ b/prometheus/prometheus-lido.yml
@@ -10,10 +10,10 @@ remote_write:
 scrape_configs:
   - job_name: 'charon'
     static_configs:
-      - targets: ['lido-charon:3620']
+      - targets: ['charon-lido:3620']
   - job_name: 'teku'
     static_configs:
-      - targets: ['lido-teku:8008']
+      - targets: ['teku-lido:8008']
   - job_name: 'node-exporter'
     static_configs:
       - targets: ['node-exporter:9100']
